# rust-deep-dive

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh  windows_command.txt
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscription.rs
tests/: health_check.rs
