[package]
name = "zero2prod"
version = "0.1.0"
authors = ["sosin <sosincomp@gmail.com>"]
edition = "2021"

[lib]
# any path, but convention
# name : specify library name (default: package.name)
path = "src/lib.rs"

# double square brackets (array in TOML's syntax)
# only one lib, but multiple binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"

# cargo add actix-web@4
# cargo add tokio@1 --features macros,rt-multi-thread
# cargo add serde@1 --features derive
# cargo add env_logger
[dependencies]
actix-web = "4"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
config = "0.15.8"
env_logger = "0.11.6"
log = "0.4.26"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

# sqlx-cli는 데이터베이스 마이그레이션 도구
# cargo install --version="~0.8" sqlx-cli \
#     --no-default-features \
#     --features rustls,postgres

# cargo add sqlx --no-default-features --features runtime-tokio-rustls,macros,postgres,uuid,chrono,migrate
# sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls", # use tokio runtime (for feature), rustls as TLS backend
    "macros",               # sqlx::query!, sqlx::query_as!
    "postgres",             # unlock postgres-specific functionality
    "uuid",                 # id / Uuid type / crate
    "chrono",               # subscribed_at / DateTime<T> type / crate
    "migrate",
]


# cargo add reqwest --dev
[dev-dependencies]
reqwest = "0.12.12"
